feat: implementar sistema de notificaciones en tiempo real, comunicados segmentados y anuncios modal